--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 </head>
 <body>
     <div class="container">
+        <div class="mobo-nav flex-space">
+            <div class="mobo-log">
+                <img src="./assets/logo1.png" alt="">
+            </div>
+            <div class="mobo-menu flex-end">
+                <a href="" ><svg  xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: white;transform: ;msFilter:;"><path d="M4 6h16v2H4zm0 5h16v2H4zm0 5h16v2H4z"></path></svg></a>
+            </div>
+        </div>
         <div class="nav center">
             <div class="left-nav">
                 <img src="./assets/logo1.png" alt="">
