added sticky nav

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Black theme tech site</title>
     <link rel="stylesheet" href="style.css">
+    
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,300;0,400;0,600;1,300;1,700&display=swap" rel="stylesheet">
+    
 </head>
 <body>
     <div class="container">
@@ -14,8 +16,9 @@
             <div class="mobo-log">
                 <img src="./assets/logo1.png" alt="">
             </div>
-            <div class="mobo-menu flex-end">
-                <a href="" ><svg  xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: white;transform: ;msFilter:;"><path d="M4 6h16v2H4zm0 5h16v2H4zm0 5h16v2H4z"></path></svg></a>
+            <div class="mobo-menu center">
+                <a href="" ><Button class="p-color">Let's Talk</Button></a>
+                <a href="" class="center" ><svg  xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: white;transform: ;msFilter:;"><path d="M4 6h16v2H4zm0 5h16v2H4zm0 5h16v2H4z"></path></svg></a>
             </div>
         </div>
         <div class="nav center">
@@ -58,7 +61,12 @@
                 </div>
             </div>
         </div>
-        <div class="header"></div>
+        <section class="latest-work">
+            <div class="top-latest-work align">
+                <h2>Latest Work</h2>
+            </div>
+            <div class="bottm-latest-work"></div>
+        </section>
     </div>
 </body>
 </html>
