--- a/index.html
+++ b/index.html
@@ -61,12 +61,20 @@
                 </div>
             </div>
         </div>
-        <section class="latest-work">
-            <div class="top-latest-work align">
-                <h2>Latest Work</h2>
-            </div>
-            <div class="bottm-latest-work"></div>
-        </section>
     </div>
+    <section class="latest-work">
+        <div class="top-latest-work align">
+            <h2>Latest Work</h2>
+        </div>
+        <div class="bottm-latest-work">
+            <div class="card">
+                <img src="./assets/port5-500x40.jpg" alt="">
+                <div class="img-text">
+                    <h5>Branding</h5>
+                    <h3>Orio Brand Kit Here</h3>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
