--- a/index.html
+++ b/index.html
@@ -66,9 +66,44 @@
         <div class="top-latest-work align">
             <h2>Latest Work</h2>
         </div>
-        <div class="bottm-latest-work">
+        <div class="bottm-latest-work flex-start">
             <div class="card">
                 <img src="./assets/port5-500x40.jpg" alt="">
+                <div class="img-text">
+                    <h5>Branding</h5>
+                    <h3>Orio Brand Kit Here</h3>
+                </div>
+            </div>
+            <div class="card">
+                <img src="./assets/ports-500x400.jpg" alt="">
+                <div class="img-text">
+                    <h5>Branding</h5>
+                    <h3>Orio Brand Kit Here</h3>
+                </div>
+            </div>
+            <div class="card">
+                <img src="./assets/port4-500x400.jpg" alt="">
+                <div class="img-text">
+                    <h5>Branding</h5>
+                    <h3>Orio Brand Kit Here</h3>
+                </div>
+            </div>
+            <div class="card">
+                <img src="./assets/port3-500x400.jpg" alt="">
+                <div class="img-text">
+                    <h5>Branding</h5>
+                    <h3>Orio Brand Kit Here</h3>
+                </div>
+            </div>
+            <div class="card">
+                <img src="./assets/port2-500x400.jpg" alt="">
+                <div class="img-text">
+                    <h5>Branding</h5>
+                    <h3>Orio Brand Kit Here</h3>
+                </div>
+            </div>
+            <div class="card">
+                <img src="./assets/port1-1-500x400.jpg" alt="">
                 <div class="img-text">
                     <h5>Branding</h5>
                     <h3>Orio Brand Kit Here</h3>
