--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
             <div class="left-main flex-start">
                 <h1>Hi, I'am Malton Snow another UX Designer based in North</h1>
                 <div class="main-work-btns">
-                    <button>Download Cv</button>
-                    <button>Your PortFolio</button>
+                    <button class="bl-btn">Download Cv</button>
+                    <a href="#">Your PortFolio</a>  
                 </div>
             </div>
             <div class="right-main">
@@ -112,6 +112,19 @@
             </div>
         </div>
     </section>
-    <section class="abt-me"></section>
+    <section class="abt-me flex-start">
+        <div class="left-abt">
+            <img src="./assets/mans-768x929.png" alt="">
+        </div>
+        <div class="right-abt flex-start">
+            <h2>About me</h2>
+            <p class="sub-title">"I had really enjoyed my journey in <span>design industry.</span>  It changed my life. I want others to have a chance too"</p>
+            <p class="abt-details">Neque ornare aenean euismod elementum nisi quis eleifend. Id faucibus nisl tincidunt eget nullam non nisi est. Suscipit tellus mauris a diam. Eu lobortis elementum nibh tellus molestie nunc. Suspendisse potenti nullam ac tortor vitae.</p>
+            <div class="graphic-skils">
+
+            </div>
+            <button class="bl-btn hire-btn">Hire Me</button>
+        </div>
+    </section>
 </body>
 </html>
