--- a/index.html
+++ b/index.html
@@ -249,7 +249,8 @@
                 <button class="bl-btn">Send messege</button>
         </div>
     </section>
-    <section class="conctact flex-start">
+    <section class="conctact ">
+       <div class="top-contact flex-start">
         <div class="contact-details flex-start">
             <img src="./assets/footer_logo-300x90.png" alt="">
             <p>We have lots of Portfolio and programs from the main market experts.</p>
@@ -286,11 +287,30 @@
             </div>
         </div>
         <div class="contact-socials">
-            <div class="socials">
-                <i class="fa-brands fa-facebook"></i>
+            <div class="socials flex-start">
+                <div class="facebk">
+                    <i class='bx bxl-facebook'></i>
+                </div>
+                <div class="facebk twitter">
+                    <i class='bx bxl-twitter' ></i>
+                </div>
+                <div class="facebk inst">
+                    <i class='bx bxl-instagram-alt'></i>
+                </div>
+                <div class="facebk linkldn">
+                    <i class='bx bxl-linkedin'></i>
+                </div>
             </div>
             <p>Subscribe for our mailing List</p>
+            <div class="input">
+                <input type="text" name="" id="">
+                <button>Subscribe</button>
+            </div>
         </div>
+       </div>
+       <div class="bottom-contact center">
+        <p>2023 Enthor. Design & Developed by BackTheme</p>
+       </div>
     </section>
 <script src="./script.js" ></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
