--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
             </div>
             <p>Subscribe for our mailing List</p>
             <div class="input">
-                <input type="text" name="" id="">
+                <input type="text" name="" placeholder="Your Email Address" id="">
                 <button>Subscribe</button>
             </div>
         </div>
