--- a/index.html
+++ b/index.html
@@ -280,8 +280,8 @@
             
             <div class="website-details numbs-details m-top-1">
                 <a href="tel:(+256)0757916783" class="numb flex-start">
-                    <i class='bx bx-envelope'></i>
-                    <p class="real-numb">iroidtu2@gmail.com</p>
+                    <i class='bx bx-globe'></i>
+                    <p class="real-numb">www.desisHub.com</p>
                 </a>
             </div>
         </div>
