--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
         <p>2023 Enthor. Design & Developed by Desis<span class="hub-color">Hub</span> </p>
        </div>
     </section>
-    <i class='bx bx-up-arrow-alt absol'></i>
+    <a href="#"><i class='bx bx-up-arrow-alt absol'></i></a>
 <script src="./script.js" ></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 
