--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
         <div class="main-work-menu flex-start">
             <div class="left-main flex-start">
-                <h1>Hi, I'am Malton Snow another UX Designer based in North</h1>
+                <h1>Hi, I'am Tukahebwa Irad another A Web Developer based in Kampala</h1>
                 <div class="main-work-btns">
                     <button class="bl-btn">Download Cv</button>
                     <a href="#">Your PortFolio <i class='bx bx-up-arrow-alt'></i></a>  
