--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </div>
             </div>
             <div class="right-main">
-                <img src="./assets/banner-768x931.png" alt="">
+                <img src="./assets/bann2.png" alt="">
             </div>
         </div>
     </div>
@@ -189,33 +189,29 @@
         </div>
     </section>
     <section class="trusted">
-        <div class="top-trusted">
+        <div class="top-trusted align">
             <h2>Hear from trusted <br> clients</h2>
         </div>
-        <!-- <div class="bottm-trusted">
-            <div class="testimony  mySwiper">
-                <div class="test-content  center swiper-wrapper">
-                    <div class="slide  center ">
-                        <div class="left-slide">
-                            <div class="overaly"></div>
-                            <img src="./assets/testimonial.jpg" alt="">
-                        </div>
-                        <div class="right-slide flex-start">
-                            <img src="./assets/qu.png" alt="">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita animi debitis itaque, quis assumenda consectetur fugiat repudiandae aspernatur quidem velit optio? Repellat a eos tempora ipsam cumque, aut est blanditiis!
-                            Expedita laboriosam sint ut, ad vero nulla eaque aliquam, cupiditate tenetur libero ut veniam ad.</p>
-                            <div class="client-details">
-                                <p class="client-name">Ester Polaster</p>
-                                <p class="client-role"> UI Designer</p>
-                            </div>
+        <div class="bottm-trusted">
+            <div class="testimony center">
+                <div class="slide center  ">
+                    <div class="left-slide center">
+                        <div class="overaly"></div>
+                        <img src="./assets/testimonial.jpg" alt="">
+                    </div>
+                    <div class="right-slide ">
+                        <img src="./assets/qu.png" alt="">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita animi debitis itaque, quis assumenda consectetur fugiat repudiandae aspernatur quidem velit optio? Repellat a eos tempora ipsam cumque, aut est blanditiis!
+                        Expedita laboriosam sint ut, ad vero nulla eaque aliquam, cupiditate tenetur libero ut veniam ad.</p>
+                        <div class="client-details">
+                            <p class="client-name">Ester Polaster</p>
+                            <p class="client-role"> UI Designer</p>
                         </div>
                     </div>
-                    <div class="swiper-button-next"></div>
-                    <div class="swiper-button-prev"></div>
-                    <div class="swiper-pagination"></div>
                 </div>
             </div>
-        </div> -->
+        </div>
+        
     </section>
     <section class="happy-sectn flex-start">
         <div class="left-happy-sectn flex-start">
