--- a/index.html
+++ b/index.html
@@ -77,42 +77,42 @@
         </div>
         <div class="bottm-latest-work flex-start">
             <div class="card">
-                <img src="./assets/port5-500x40.jpg" alt="">
+                <img src="./mockup/betting-full.webp" alt="">
                 <div class="img-text">
                     <h5>Branding</h5>
                     <h3>Orio Brand Kit Here</h3>
                 </div>
             </div>
             <div class="card">
-                <img src="./assets/ports-500x400.jpg" alt="">
+                <img src="./mockup/ecoo.png" alt="">
                 <div class="img-text">
                     <h5>Branding</h5>
                     <h3>Orio Brand Kit Here</h3>
                 </div>
             </div>
             <div class="card">
-                <img src="./assets/port4-500x400.jpg" alt="">
+                <img src="./mockup/hossp.png" alt="">
                 <div class="img-text">
                     <h5>Branding</h5>
                     <h3>Orio Brand Kit Here</h3>
                 </div>
             </div>
             <div class="card">
-                <img src="./assets/port3-500x400.jpg" alt="">
+                <img src="./mockup/kong.png" alt="">
                 <div class="img-text">
                     <h5>Branding</h5>
                     <h3>Orio Brand Kit Here</h3>
                 </div>
             </div>
             <div class="card">
-                <img src="./assets/port2-500x400.jpg" alt="">
+                <img src="./mockup/pink port.png" alt="">
                 <div class="img-text">
                     <h5>Branding</h5>
                     <h3>Orio Brand Kit Here</h3>
                 </div>
             </div>
             <div class="card">
-                <img src="./assets/port1-1-500x400.jpg" alt="">
+                <img src="./mockup/torrito.png" alt="">
                 <div class="img-text">
                     <h5>Branding</h5>
                     <h3>Orio Brand Kit Here</h3>
