--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="./mockup/funded.png" alt="">
+                <img src="./mockup/pink port.png" alt="">
                 <div class="img-text">
                     <h5>Branding</h5>
                     <h3>Orio Brand Kit Here</h3>
