--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                 <div class="img-text">
                     <h5>Branding</h5>
                     <h3>Orio Brand Kit Here</h3>
+                    <a href="https://iroid-betting.netlify.app/"> Preview site</a>
                 </div>
             </div>
             <div class="card">
@@ -88,6 +89,7 @@
                 <div class="img-text">
                     <h5>Branding</h5>
                     <h3>Orio Brand Kit Here</h3>
+                    <a href="https://iroid-ecoshop-clone.netlify.app/"> Preview site</a>
                 </div>
             </div>
             <div class="card">
@@ -95,6 +97,7 @@
                 <div class="img-text">
                     <h5>Branding</h5>
                     <h3>Orio Brand Kit Here</h3>
+                    <a href="#"> Preview site</a>
                 </div>
             </div>
             <div class="card">
@@ -102,20 +105,23 @@
                 <div class="img-text">
                     <h5>Branding</h5>
                     <h3>Orio Brand Kit Here</h3>
+                    <a href="https://iroid-kongashop-clone.netlify.app/"> Preview site</a>
                 </div>
             </div>
             <div class="card">
-                <img src="./mockup/pink port.png" alt="">
+                <img src="./mockup/comdev.png" alt="">
                 <div class="img-text">
                     <h5>Branding</h5>
                     <h3>Orio Brand Kit Here</h3>
+                    <a href="https://comdev.netlify.app/"> Preview site</a>
                 </div>
             </div>
             <div class="card">
-                <img src="./mockup/torrito.png" alt="">
+                <img src="./mockup/charity.png" alt="">
                 <div class="img-text">
                     <h5>Branding</h5>
                     <h3>Orio Brand Kit Here</h3>
+                    <a href="https://iroid-homepage.netlify.app/"> Preview site</a>
                 </div>
             </div>
         </div>
