--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
         <div class="bottm-latest-work flex-start">
             <div class="card">
-                <img src="./mockup/betting-full.webp" alt="">
+                <img src="./mockup/betting-full.png" alt="">
                 <div class="img-text">
                     <h5>Branding</h5>
                     <h3>Orio Brand Kit Here</h3>
