--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
 </head>
 <body>
+    <a href="https://wa.me/message/NPDYF6DIWV7IM1" class="absol"> <img src="./icons/whatsapp.png" ></a>
     <div class="container">
         <div class="mobo-nav flex-space">
             <div class="mobo-log">
@@ -60,10 +61,12 @@
         </div>
         <div class="main-work-menu flex-start">
             <div class="left-main flex-start">
-                <h1>Hi, I'am Tukahebwa Irad another A Web Developer based in Kampala</h1>
+                <h3>Hi, I'am </h3>
+                <h1>Tukahebwa Irad </h1>
+                <h3>Full-stack Web Developer based in Kampala</h3>
                 <div class="main-work-btns">
                     <button class="bl-btn">Download Cv</button>
-                    <a href="#">Your PortFolio <i class='bx bx-up-arrow-alt'></i></a>  
+                    <a href="#">check my GitHub<i class='bx bx-up-arrow-alt'></i></a>  
                 </div>
             </div>
             <div class="right-main">
@@ -313,7 +316,6 @@
         <p>2023 Enthor. Design & Developed by Desis<span class="hub-color">Hub</span> </p>
        </div>
     </section>
-    <a href="#"><i class='bx bx-up-arrow-alt absol'></i></a>
 <script src="./script.js" ></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 
