--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
         </div>
         <div class="right-abt flex-start">
             <h2>About me</h2>
-            <p class="sub-title">"I had really enjoyed my journey in <span>design industry.</span>  It changed my life. I want others to have a chance too"</p>
-            <p class="abt-details">Neque ornare aenean euismod elementum nisi quis eleifend. Id faucibus nisl tincidunt eget nullam non nisi est. Suscipit tellus mauris a diam. Eu lobortis elementum nibh tellus molestie nunc. Suspendisse potenti nullam ac tortor vitae.</p>
+            <p class="sub-title">"Bringing Creativity and Expertise to  <span>Web Development</span>  </p>
+            <p class="abt-details">I am a full-stack developer with a passion for creating visually appealing and user-friendly websites. With expertise in HTML, CSS, SASS, JavaScript, and Git, I strive to develop responsive and dynamic web applications that meet the needs of my clients. Constantly seeking to learn and grow, I stay up to date with the latest technologies and design trends in the industry. My goal is to deliver exceptional results and make a positive impact on the projects I work on.</p>
             <div class="graphic-skils flex-start">
                 <div class="figma skil-icon">
                     <i class='bx bxl-figma' ></i>
