--- a/index.html
+++ b/index.html
@@ -292,18 +292,18 @@
         </div>
         <div class="contact-socials">
             <div class="socials flex-start">
-                <div class="facebk">
+                <a href="https://www.facebook.com/tukahebwa.irad" class="facebk">
                     <i class='bx bxl-facebook'></i>
-                </div>
-                <div class="facebk twitter">
+                </a>
+                <a href="https://twitter.com/iroid_12" class="facebk twitter">
                     <i class='bx bxl-twitter' ></i>
-                </div>
-                <div class="facebk inst">
+                </a>
+                <a href="" class="facebk inst">
                     <i class='bx bxl-instagram-alt'></i>
-                </div>
-                <div class="facebk linkldn">
+                </a >
+                <a href="" class="facebk linkldn">
                     <i class='bx bxl-linkedin'></i>
-                </div>
+                </a >
             </div>
             <p>Subscribe for our mailing List</p>
             <div class="input">
