--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     </section>
     <section class="abt-me flex-start">
         <div class="left-abt">
-            <img src="./assets/bann1.png" alt="">
+            <img src="./assets/about-bann.png" alt="">
         </div>
         <div class="right-abt flex-start">
             <h2>About me</h2>
