--- a/index.html
+++ b/index.html
@@ -248,13 +248,13 @@
             </div>
         </div>
         <form action="https://formsubmit.co/iradtu2@gmail.com" method="POST" class="right-happy-sectn flex-start">
-            <input type="text" name="fullname" placeholder="Your Name">
-                <input type="email" name="email" placeholder="Your Email">
+            <input type="text" name="fullname" placeholder="Your Name" required>
+                <input type="email" name="email" placeholder="Your Email" required>
                 <input type="hidden" name="_next" value="https://iroid-dev.netlify.app/thankyou.html">
                 <input type="hidden" name="_subject" value="New Client submission!">
                 <input type="hidden" name="_autoresponse" value="Thank you for reaching me Out, i will be in touch with you in a minute">
                 <input type="hidden" name="_template" value="table">
-                <textarea name="message" id="" cols="30" placeholder="Your Messege" rows="10"></textarea>
+                <textarea required name="message" id="" cols="30" placeholder="Your Messege" rows="10"></textarea>
                 <button type="submit" class="bl-btn">Send messege</button>
         </form>
     </section>
