--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                 </div>
             </div>
         </div>
-        <form action="https://formsubmit.co/iradtu2@gmail.com" method="POST" class="right-happy-sectn flex-start">
+        <form action="https://formsubmit.co/412b327cb3c16cc7be771c92f67cef9a" method="POST" class="right-happy-sectn flex-start">
             <input type="text" name="fullname" placeholder="Your Name" required>
                 <input type="email" name="email" placeholder="Your Email" required>
                 <input type="hidden" name="_next" value="https://iroid-dev.netlify.app/thankyou.html">
