--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Black theme tech site</title>
+    <title>iroid portfolio</title>
+   
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,300;0,400;0,600;1,300;1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+    <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
+/>
 </head>
 <body>
     <a href="https://wa.me/message/NPDYF6DIWV7IM1" class="absol"> <img src="./icons/whatsapp.png" ></a>
@@ -198,29 +202,90 @@
         </div>
     </section>
     <section class="trusted">
-        <div class="top-trusted align">
+        <div class="top-trusted ">
             <h2>Hear from trusted <br> clients</h2>
         </div>
         <div class="bottm-trusted">
-            <div class="testimony center">
-                <div class="slide center  ">
-                    <div class="left-slide center">
-                        <div class="overaly"></div>
-                        <img src="./assets/testimonial.jpg" alt="">
-                    </div>
-                    <div class="right-slide ">
-                        <img src="./assets/qu.png" alt="">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita animi debitis itaque, quis assumenda consectetur fugiat repudiandae aspernatur quidem velit optio? Repellat a eos tempora ipsam cumque, aut est blanditiis!
-                        Expedita laboriosam sint ut, ad vero nulla eaque aliquam, cupiditate tenetur libero ut veniam ad.</p>
-                        <div class="client-details">
-                            <p class="client-name">Ester Polaster</p>
-                            <p class="client-role"> UI Designer</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        
+          <!-- Slider main container -->
+<div class="swiper">
+    <!-- Additional required wrapper -->
+    <div class="swiper-wrapper">
+      <!-- Slides -->
+        <div class="swiper-slide">
+            <div class="left-sectn">
+            <img src="./assets/testimonial.jpg" alt="">
+            <div class="bg-overal"></div>
+         </div>
+         <div class="right-sectn">
+            <span>"</span><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus labore itaque repellat laborum eos voluptate aut quia vel Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt quasi, similique voluptas architecto vero natus assumenda temporibus illum atque iusto cum error id repellendus sequi, quae iure dicta vel quidem! corporis provident?</p><span>"</span>
+         </div>
+      </div>
+      <div class="swiper-slide">
+        <div class="left-sectn">
+            <img src="./assets/testimonial.jpg" alt="">
+            <div class="bg-overal"></div>
+         </div>
+         <div class="right-sectn">
+            <span>"</span><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus labore itaque repellat laborum eos voluptate aut quia vel Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt quasi, similique voluptas architecto vero natus assumenda temporibus illum atque iusto cum error id repellendus sequi, quae iure dicta vel quidem! corporis provident?</p><span>"</span>
+         </div>
+      </div>
+      <div class="swiper-slide">
+        <div class="left-sectn">
+            <img src="./assets/testimonial.jpg" alt="">
+            <div class="bg-overal"></div>
+         </div>
+         <div class="right-sectn">
+            <span>"</span><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus labore itaque repellat laborum eos voluptate aut quia vel Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt quasi, similique voluptas architecto vero natus assumenda temporibus illum atque iusto cum error id repellendus sequi, quae iure dicta vel quidem! corporis provident?</p><span>"</span>
+         </div>
+      </div>
+      <div class="swiper-slide">
+        <div class="left-sectn">
+            <img src="./assets/testimonial.jpg" alt="">
+            <div class="bg-overal"></div>
+         </div>
+         <div class="right-sectn">
+            <span>"</span><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus labore itaque repellat laborum eos voluptate aut quia vel Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt quasi, similique voluptas architecto vero natus assumenda temporibus illum atque iusto cum error id repellendus sequi, quae iure dicta vel quidem! corporis provident?</p><span>"</span>
+         </div>
+      </div>
+      <div class="swiper-slide">
+        <div class="left-sectn">
+            <img src="./assets/testimonial.jpg" alt="">
+            <div class="bg-overal"></div>
+         </div>
+         <div class="right-sectn center">
+            <span>"</span><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus labore itaque repellat laborum eos voluptate aut quia vel Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt quasi, similique voluptas architecto vero natus assumenda temporibus illum atque iusto cum error id repellendus sequi, quae iure dicta vel quidem! corporis provident?</p><span>"</span>
+         </div>
+      </div>
+      <div class="swiper-slide">
+        <div class="left-sectn">
+            <img src="./assets/testimonial.jpg" alt="">
+            <div class="bg-overal"></div>
+         </div>
+         <div class="right-sectn">
+            <span>"</span><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus labore itaque repellat laborum eos voluptate aut quia vel Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt quasi, similique voluptas architecto vero natus assumenda temporibus illum atque iusto cum error id repellendus sequi, quae iure dicta vel quidem! corporis provident?</p><span>"</span>
+         </div>
+      </div>    
+    </div>
+    <!-- If we need pagination -->
+    <div class="swiper-pagination"></div>
+  
+    <!-- If we need navigation buttons -->
+    <div class="custom-btns">
+        <svg id="left" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M11.25 9l-3 3m0 0l3 3m-3-3h7.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+          </svg>
+          <svg id="right" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M12.75 15l3-3m0 0l-3-3m3 3h-7.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+          </svg>
+          
+    </div>
+    <!-- <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next"></div> -->
+  
+    <!-- If we need scrollbar -->
+    <!-- <div class="swiper-scrollbar"></div> -->
+  </div>    
+</div>        
     </section>
     <section class="happy-sectn flex-start">
         <div class="left-happy-sectn flex-start">
@@ -320,8 +385,8 @@
         <p>2023 Enthor. Design & Developed by Desis<span class="hub-color">Hub</span> </p>
        </div>
     </section>
-<script src="./script.js" ></script>
-<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <script src="./script.js" ></script>
 </body>
 </html>
