--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
                 <div class="home-men flex-space">
                     <a href="#">Home</a>
                     <p class="drop center">V</p>
+                    <p class="cancel-drop drop">V</p>
+                    
+                </div>
+                <div class="home-men-list">
+                     <div class="multiPage flex-space    ">
+                        <a href="#" class="">Home page 1</a>
+                        <p class="home-men-list-drop center">V</p>
+                     </div>
+                     <div class="multiPage flex-space    ">
+                        <a href="#" class="">Home page 1</a>
+                        <p class="home-men-list-drop center">V</p>
+                     </div>
                 </div>
                 <div class="home-men ">
                     <a href="">About</a>
